--- a/index.html
+++ b/index.html
@@ -6,3 +6,30 @@
   <script src="/ruffle/ruffle.js"></script>
   <embed src="gtttatint2.swf">
 </body>
+
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <meta charset='utf8'>
+    </head>
+    <body>
+        <div id='ruffle'></div>
+        <script src='https://e9x.github.io/ruffle/ruffle.js'></script>
+        <script>
+var swfobject = {};
+
+swfobject.embedSWF = function(url, cont, width, height){
+    var ruffle = window.RufflePlayer.newest(),
+        player = Object.assign(document.getElementById(cont).appendChild(ruffle.createPlayer()), {
+            width: width,
+            height: height,
+            style: 'width: ' + width + 'px; height: ' + height + 'px',
+        });
+    
+    player.load({ url: url });
+}
+
+swfobject.embedSWF('https://htwins.net/gtttatint/gtttatint2.swf', 'ruffle', 500, 500);
+        </script>
+    </body>
+</html>
