--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
         <script src='https://e9x.github.io/ruffle/ruffle.js'></script>
     </head>
     <body>
-        <embed src="https://htwins.net/gtttatint/gtttatint2.swf"></embed>
+        <!--<embed src="https://htwins.net/gtttatint/gtttatint2.swf"></embed>-->
+        <script>
+            window.RufflePlayer = window.RufflePlayer || {};
+            window.addEventListener("load", (event) => {
+            const ruffle = window.RufflePlayer.newest();
+            const player = ruffle.createPlayer();
+            const container = document.getElementById("container");
+            container.appendChild(player);
+            player.load("gtttatint2.swf");
+            });
+        </script>
+        <script src='https://e9x.github.io/ruffle/ruffle.js'></script>
     </body>
 </html>
+
