--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <script type="text/javascript" src="swf2js.js"></script>
     </head>
-    <body>
+    <body scroll="no" style="overflow: hidden">
         <script type="text/javascript">
           swf2js.load('gtttatint2.swf');
         </script>  
