--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
     <head>
         <script type="text/javascript" src="swf2js.js"></script>
+        <style>
+            html, body {margin: 0; height: 100%; overflow: hidden}
+        </style>
     </head>
-    <body scroll="no" style="overflow: hidden">
+    <body>
         <script type="text/javascript">
           swf2js.load('gtttatint2.swf');
         </script>  
